--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Zapatos Misterio</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    Zapatossssssss
+    <header><div id="logo"></div> Zapatos Misterio</header>
 </body>
 </html>
