first puzzle is now working

--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -10,8 +10,14 @@
     <header><div id="logo"></div> <a href="..">Zapatos Misterio</a></header>
     <nav><a href=".">Zapatos</a><a href="../nosotros">Nosotros</a></nav>
     <article>
-        <h1>Zapato 1</h1>
-        <img width="150px" src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Museo_del_Bicentenario_-_Zapatos_de_N%C3%A9stor_Kirchner.jpg" alt="Zapato 1">
+        <h1>Sandalias <i>Iniciadoras</i></h1>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS11UOvvtJITRxJ8d4gKE6FAi7Xc3fZO1k8ZYGtiTaup0Z9en4y&usqp=CAU" alt="Sandalias Iniciadoras">
+        <p>Las sandalias <i>Iniciadoras</i> son perfectas para comenzar cualquier aventura.</p>
+        <hr>
+    </article>
+    <article>
+        <h1>Zapatos</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Museo_del_Bicentenario_-_Zapatos_de_N%C3%A9stor_Kirchner.jpg" alt="Zapato 1">
         <p>Los cómodos [nombre], diseñados para una marcha ligera y confortable, ...</p>
     </article>
 </body>
