--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -11,7 +11,8 @@
     <nav><a href="../zapatos">Zapatos</a><a href=".">Nosotros</a></nav>
     <section>
         <h1>Amantes del calzado</h1>
-        <p>En Zapatos Misterio creemos que el calzado no es una prenda más. ...</p>
+        <p>Fundada hace más de 75 años por Don Manolo Mocasín, en Zapatos Misterio creemos en el calzado como una extensión más de la personalidad, y es por ello que siempre hemos tratado desde el mimo y la máxima profesionalidad a cada cliente.</p>
+        <p>Desgraciadamente, hace unos años que Manolo Mocasín ya no está al frente de este negocio familiar, que generación tras generación ha compartido la ilusión de calzar a San Sebastián, debido a una enfermedad neurodegenerativa que le ha obligado a apartarse del negocio.</p>
     </section>
 </body>
 </html>
