Added hidden link to first puzzle, and implemented hint texts.

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <section>
         <h1>Bienvenido/a a nuestra tienda</h1>
         <p>En Zapatos Misterio llevamos más de 75 años ofreciendo la mayor calidad de calzado al mejor precio.</p>
+        <p>Creemos que existe un zapato adecuado para cada situación en la vida, y en esa filosofía hemos basado todos nuestros actos en la historia de nuestro negocio familiar.</p>
+        <p>Visita el apartado 'Zapatos' para descubrir nuestros productos, o descubre más sobre nosotros en el apartado 'Nosotros'.</p>
+        <p>¡Esperamos verte pronto por nuestra tienda!</p>
     </section>
 </body>
 </html>
