--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -12,8 +12,9 @@
     <article>
         <h1>Sandalias <i>Iniciadoras</i></h1>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS11UOvvtJITRxJ8d4gKE6FAi7Xc3fZO1k8ZYGtiTaup0Z9en4y&usqp=CAU" alt="Sandalias Iniciadoras">
-        <p>Las sandalias <i>Iniciadoras</i> son perfectas para comenzar cualquier aventura.</p>
-        <hr>
+        <p>Siempre se dice que si no sabes en qué dirección vas, nunca llegarás a ninguna parte. Las sandalias <i>Iniciadoras</i> son perfectas para comenzar cualquier aventura en la dirección correcta.</p>
+        <p>Sus robustos acabados serán perfectos para cualquier tipo de andadura, lo que las convierte en un calzado súmamente versátil (¡a menos, claro, que llueva!).</p>
+        <p>Así que, ¡mirad para arriba, que caen judías!, y comenzad vuestro camino con este calzado todoterreno.</p>
     </article>
     <article>
         <h1>Zapatos</h1>
