--- a/puzzles/03512.html
+++ b/puzzles/03512.html
@@ -8,6 +8,7 @@
     <title>¿Qué es esto?</title>
 </head>
 <body>
+    <header><h1>¿Qué es esto?</h1></header>
     <div id="numbers">
         
     </div>
