puzzle structure and style done

--- a/puzzles/manolodice.html
+++ b/puzzles/manolodice.html
@@ -8,6 +8,7 @@
     <title>¿Qué diría Manolo de todo esto?</title>
 </head>
 <body>
+    <header><h1>¿Qué diría Manolo de todo esto?</h1></header>
     <button id="red">⮾</button>
     <button id="blue">⮾</button>
     <button id="green">⮾</button>
