--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -17,6 +17,10 @@
         <p>Así que, ¡mirad para arriba, que caen judías!, y comenzad vuestro camino con este calzado todoterreno.</p>
     </article>
     <article>
+        <h1>Zapatos <i>Color</i></h1>
+        <img src="https://c.pxhere.com/photos/2d/17/shoes_diversity_colors_child-1215704.jpg!d" alt="Zapatos Color">
+    </article>
+    <article>
         <h1>Zapatos</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Museo_del_Bicentenario_-_Zapatos_de_N%C3%A9stor_Kirchner.jpg" alt="Zapato 1">
         <p>Los cómodos [nombre], diseñados para una marcha ligera y confortable, ...</p>
