--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <h1>Bienvenido/a a nuestra tienda</h1>
         <p>En Zapatos Misterio llevamos más de 75 años ofreciendo la mayor calidad de calzado al mejor precio.</p>
         <p>Creemos que existe un zapato adecuado para cada situación en la vida, y en esa filosofía hemos basado todos nuestros actos en la historia de nuestro negocio familiar.</p>
-        <p>Visita el apartado 'Zapatos' para descubrir nuestros productos, o descubre más sobre nosotros en el apartado 'Nosotros'.</p>
+        <p>Descubre más sobre nuestra historia en el apartado 'Nosotros'.</p>
         <p>¡Esperamos verte pronto por nuestra tienda!</p>
     </section>
 </body>
