Secod puzzle now works

--- a/puzzles/manolodice.html
+++ b/puzzles/manolodice.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <header><h1>¿Qué diría Manolo de todo esto?</h1></header>
-    <button id="red">⮾</button>
-    <button id="blue">⮾</button>
-    <button id="green">⮾</button>
-    <button id="yellow">⮾</button>
-    <button id="reset">RESET</button>
+    <button id="red" onclick="redClick()">⮾</button>
+    <button id="blue" onclick="blueClick()">⮾</button>
+    <button id="green" onclick="greenClick()">⮾</button>
+    <button id="yellow" onclick="yellowClick()">⮾</button>
+    <button id="reset" onclick="reset()">RESET</button>
 </body>
 </html>
