First puzzle opens in a new tab now, allowing the user to look for hints in the main webpage while solving the puzzles

--- a/nosotros/index.html
+++ b/nosotros/index.html
@@ -16,6 +16,6 @@
         <p>Desgraciadamente, hace unos años que Manolo Mocasín ya no está al frente de este negocio familiar, que generación tras generación ha compartido la ilusión de calzar a San Sebastián, debido a una enfermedad neurodegenerativa que le ha obligado a apartarse del negocio.</p>
         <p>El paso del tiempo es inevitable, y tanto Manolo Mocasín como los que hemos seguido con el negocio, sentimos ya cercana la hora de un merecido descanso. Es por eso que nos gustaría poder legar nuestra zapatería a una persona inquieta en el mundo de la moda, pero con capacidad de empatía con las necesidades de cada cliente y, sobre todo, amor por los zapatos.</p>
     </section>
-    <div id="hidden_element"><a href="../puzzles/03512.html">¿ ?</a></div>
+    <div id="hidden_element"><a href="../puzzles/03512.html" target="blank">¿ ?</a></div>
 </body>
 </html>
