Added hint text for second puzzle

--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -17,13 +17,17 @@
         <p>Así que, ¡mirad para arriba, que caen judías!, y comenzad vuestro camino con este calzado todoterreno.</p>
     </article>
     <article>
-        <h1>Zapatos <i>Color</i></h1>
-        <img src="https://c.pxhere.com/photos/2d/17/shoes_diversity_colors_child-1215704.jpg!d" alt="Zapatos Color">
+        <h1>Zapatos <i>Arcoiris</i></h1>
+        <img src="https://cdn.pixabay.com/photo/2014/11/28/18/46/shoes-549066_1280.jpg" alt="Zapatos Arcoiris">
+        <p>¿Quién necesita un príncipe azul cuando se pueden tener zapatos de baile de cualquier color?</p>
+        <p>En nuestra zapatería no te prometemos príncipes azules, pero sí finales de fantasía, largas noches gastando en la pista de baile esos llamativos <i>Arcoiris</i> amarillos con los que atraerás todas las miradas.</p>
+        <p><i>Arcoiris</i> están hechos para que te expreses, ya quieras conjuntar con un rojo atardecer o un frondoso bosque verde.</p>
+        <p>¡Ven a nuestra tienda y consigue el pack especial Mediodía: un par de zapatos amarillos de regalo con tus zapatos azules!</p>
     </article>
     <article>
-        <h1>Zapatos</h1>
+        <h1>Zapatos Legado</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Museo_del_Bicentenario_-_Zapatos_de_N%C3%A9stor_Kirchner.jpg" alt="Zapato 1">
-        <p>Los cómodos [nombre], diseñados para una marcha ligera y confortable, ...</p>
+        <p></p>
     </article>
 </body>
 </html>
