implemented fourth puzzle

--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -10,14 +10,14 @@
     <header><div id="logo"></div> <a href="..">Zapatos Misterio</a></header>
     <nav><a href=".">Zapatos</a><a href="../nosotros">Nosotros</a></nav>
     <article>
-        <h1>Sandalias <i>Iniciadoras</i></h1>
+        <h1>Sandalias "Iniciadoras"</h1>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS11UOvvtJITRxJ8d4gKE6FAi7Xc3fZO1k8ZYGtiTaup0Z9en4y&usqp=CAU" alt="Sandalias Iniciadoras">
         <p>Siempre se dice que si no sabes en qué dirección vas, nunca llegarás a ninguna parte. Las sandalias <i>Iniciadoras</i> son perfectas para comenzar cualquier aventura en la dirección correcta.</p>
         <p>Sus robustos acabados serán perfectos para cualquier tipo de andadura, lo que las convierte en un calzado súmamente versátil (¡a menos, claro, que llueva!).</p>
         <p>Así que, ¡mirad para arriba, que caen judías!, y comenzad vuestro camino con este calzado todoterreno.</p>
     </article>
     <article>
-        <h1>Zapatos <i>Arcoiris</i></h1>
+        <h1>Zapatos "Arcoiris"</h1>
         <img src="https://cdn.pixabay.com/photo/2014/11/28/18/46/shoes-549066_1280.jpg" alt="Zapatos Arcoiris">
         <p>¿Quién necesita un príncipe azul cuando se pueden tener zapatos de baile de cualquier color?</p>
         <p>En nuestra zapatería no te prometemos príncipes azules, pero sí finales de fantasía, largas noches gastando en la pista de baile esos llamativos <i>Arcoiris</i> amarillos con los que atraerás todas las miradas.</p>
@@ -25,9 +25,23 @@
         <p>¡Ven a nuestra tienda y consigue el pack especial Mediodía: un par de zapatos amarillos de regalo con tus zapatos azules!</p>
     </article>
     <article>
-        <h1>Zapatos Legado</h1>
+        <h1>Zapatos "Legado"</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Museo_del_Bicentenario_-_Zapatos_de_N%C3%A9stor_Kirchner.jpg" alt="Zapato 1">
         <p></p>
+    </article>
+    <article class="novedad">
+        <h1>Novedad: Deportivas "Equilibradas"</h1>
+        <img src="https://cdn.pixabay.com/photo/2017/07/02/19/24/dumbbells-2465478_1280.jpg" alt="Equilibradas">
+        <p>Un diseño moderno para una nueva generacion. Las nuevas deportivas <i>Equilibradas</i> ofrecen un perfecto rendimiento para todo tipo de actividades deportivas.</p>
+    </article>
+    <article class="novedad">
+        <h1>Novedad: Botas "Cumbre"</h1>
+        <img src="https://cdn.pixabay.com/photo/2019/09/29/18/30/shoes-4514053_1280.jpg" alt="Cumbre">
+        <p></p>
+    </article>
+    <article class="novedad">
+        <h1>Novedad: Zapatos de vestir "Oxford"</h1>
+        <img src="https://cdn.pixabay.com/photo/2018/07/10/07/54/oxford-3528032_1280.jpg" alt="Oxford">
     </article>
 </body>
 </html>
