--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -30,9 +30,9 @@
         <p></p>
     </article>
     <article class="novedad">
-        <h1>Novedad: Deportivas "Equilibradas"</h1>
+        <h1>Novedad: Deportivas "Equilibrio"</h1>
         <img src="https://cdn.pixabay.com/photo/2017/07/02/19/24/dumbbells-2465478_1280.jpg" alt="Equilibradas">
-        <p>Un diseño moderno para una nueva generacion. Las nuevas deportivas <i>Equilibradas</i> ofrecen un perfecto rendimiento para todo tipo de actividades deportivas.</p>
+        <p>Un diseño moderno para una nueva generacion. Las nuevas deportivas <i>Equilibrio</i> ofrecen un perfecto rendimiento para todo tipo de actividades deportivas.</p>
     </article>
     <article class="novedad">
         <h1>Novedad: Botas "Cumbre"</h1>
