--- a/puzzles/tendencias.html
+++ b/puzzles/tendencias.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <h1>Conociendo el sector</h1>
-    <p>Si vas a hacerte cargo de una zapatería, lo suyo sería que supieras algo de zapatos, ¿no?</p>
-    <p>El mundo de la moda es cambiante y confuso, aunque algunas cosas nunca cambian (¡la gente siempre necesitará zapatos!)</p>
-    <p>A veces, eso sí, hay que replantearse decisiones comerciales en función de estas tendencias. No son pocas las veces que hemos tenido que retirar un producto que nos parecía magnífico, simplemente porque la gente no lo quería.</p>
-    <p>¡El cliente siempre tiene la razón! Pero el cliente suele hacer lo que le dicen.</p>
-    <p>Recientemente hemos sacado algunos artículos nuevos a la venta, pero parece que no todos están teniendo el éxito que nos gustaría. Por esa razón, quizás quieras revisar <a href="#" target="_blank">este blog de tendencias</a> para tomar una decisión: ¿qué modelo de zapato deberíamos retirar de los estantes?</p>
-    <input type="text" id="input"><button onclick="check()">🡢</button>
+    <p>Resolver los problemas con tu ingenio está muy bien, pero deberías acostumbrarte a escuchar la voz de los expertos. ¿Qué tal si, esta vez, echas un vistazo a <a href="#">este blog de tendencias</a>?</p>
+    <button class="red" onclick="switchClass()">⮾</button>
+    <button class="red" onclick="switchClass()">⮾</button>
+    <button class="red" onclick="switchClass()">⮾</button>
+    <button class="red" onclick="switchClass()">⮾</button>
+    <button class="red" onclick="switchClass()">⮾</button>
+    <button class="red" onclick="switchClass()">⮾</button>
 </body>
 </html>
