--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -33,15 +33,20 @@
         <h1>Novedad: Deportivas "Equilibrio"</h1>
         <img src="https://cdn.pixabay.com/photo/2017/07/02/19/24/dumbbells-2465478_1280.jpg" alt="Equilibradas">
         <p>Un diseño moderno para una nueva generacion. Las nuevas deportivas <i>Equilibrio</i> ofrecen un perfecto rendimiento para todo tipo de actividades deportivas.</p>
+        <p>Disponibles en dos colores (azul y rojo), son la opción perfecta para poerte en forma. Sus suelas han sido diseñadas con esmero y cariño para asegurar la pisada más cómoda y suave posible, permitiendo así la actividad durante horas sin siquiera recordad que las llevas puestas.</p>
+        <p>¡Cómpralas ahora y llévate unos calcetines rojos de regalo!</p>
     </article>
     <article class="novedad">
         <h1>Novedad: Botas "Cumbre"</h1>
         <img src="https://cdn.pixabay.com/photo/2019/09/29/18/30/shoes-4514053_1280.jpg" alt="Cumbre">
         <p></p>
+        <p>¡Cómpralas ahora y llévate unos calcetines rojos de regalo!</p>
     </article>
     <article class="novedad">
         <h1>Novedad: Zapatos de vestir "Oxford"</h1>
         <img src="https://cdn.pixabay.com/photo/2018/07/10/07/54/oxford-3528032_1280.jpg" alt="Oxford">
+        <p></p>
+        <p>¡Cómpralos ahora y llévate unos calcetines rojos de regalo!</p>
     </article>
 </body>
 </html>
