Added hint text for 3rd puzzle

--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -27,7 +27,8 @@
     <article>
         <h1>Zapatos "Legado"</h1>
         <img src="https://upload.wikimedia.org/wikipedia/commons/a/ad/Museo_del_Bicentenario_-_Zapatos_de_N%C3%A9stor_Kirchner.jpg" alt="Zapato 1">
-        <p></p>
+        <p>Los <i>Legado</i> no son unos zapatos cualquiera. Durante décadas, nuestros clientes más exclusivos siempre han confiado en ellos, por su noble construcción e impecable aspecto.</p>
+        <p>En la fabricación de estos zapatos, el último paso es el que debe darse con mayor cuidado. Es por eso que los acabados de los <i>Legado</i> se realizan con la mayor delicadeza, para garantizar una comodidad fantástica.</p>
     </article>
     <article class="novedad">
         <h1>Novedad: Deportivas "Equilibrio"</h1>
