Added opening hours

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <p>Creemos que existe un zapato adecuado para cada situación en la vida, y en esa filosofía hemos basado todos nuestros actos en la historia de nuestro negocio familiar.</p>
         <p>Descubre más sobre nuestra historia en el apartado 'Nosotros'.</p>
         <p>¡Esperamos verte pronto por nuestra tienda!</p>
+        <p>Abrimos de 9:30 a 14:40 y de 15:20 a 17:15</p>
     </section>
 </body>
 </html>
