--- a/puzzles/03512.html
+++ b/puzzles/03512.html
@@ -13,11 +13,11 @@
         
     </div>
     <div id="containers">
-        <div class="container"></div>
-        <div class="container"></div>
-        <div class="container"></div>
-        <div class="container"></div>
-        <div class="container"></div>
+        <div class="container" id="cont1"></div>
+        <div class="container" id="cont2"></div>
+        <div class="container" id="cont3"></div>
+        <div class="container" id="cont4"></div>
+        <div class="container" id="cont5"></div>
     </div>
 </body>
 </html>
