Added listener for submitting pressing Enter. Also, added a warning sign that appears when the user enters an invalid answer.

--- a/puzzles/detalle.html
+++ b/puzzles/detalle.html
@@ -33,6 +33,6 @@
         </div>
     </div>
 
-    <input type="text" id="input"><button onclick="check()">🡢</button>
+    <input type="text" id="input"><button onclick="check()">🡢</button><div id="incorrect" class="transparent">❌</div>
 </body>
 </html>
