Added listener for submitting pressing Enter. Also, added a warning sign that appears when the user enters an invalid answer.

--- a/puzzles/legado.html
+++ b/puzzles/legado.html
@@ -15,6 +15,6 @@
     <p>Si completas todas estas pruebas con éxito, te será revelado el lugar en el que he guardado un gran tesoro, el cual confío en que gestionarás con sabiduría, protegiéndolo de los peligros que en el mundo acechan. Y bueno, qué demonios, si te sobra algo, puedes gastarlo en un bufet. ¡Al fin y al cabo te lo habrás ganado, sagaz caminante!</p>
     <p>Sin más tiempo que robarle, le permito continuar, no sin antes plantearle una cuestión que, sin duda, deberá saber responder sin dificultades.</p>
     <h2>¿En qué consiste el tesoro que, generosamente, ofreceré al ganador?</h2>
-    <input type="text" id="input"><button onclick="check()">🡢</button>
+    <input type="text" id="input"><button onclick="check()">🡢</button><div id="incorrect" class="transparent">❌</div>
 </body>
 </html>
