--- a/puzzles/completado.html
+++ b/puzzles/completado.html
@@ -15,7 +15,7 @@
         <img src="https://cdn.pixabay.com/photo/2016/04/01/09/52/cartoon-1299636_1280.png" alt="Fantástico">
         <img src="https://cdn.pixabay.com/photo/2016/11/29/13/20/balloons-1869790_1280.jpg" alt="Globos de fiesta">    
     </div>
-    <p>Volviendo al mundo real, espero que hayáis pasado un rato entretenido y os hayáis olvidado por un rato de <i>La Situación</i>. ¡No olvidéis compartir el juego si os ha gustado! (code.diegopozas.com/zapatosmisterio)</p>
+    <p>Volviendo al mundo real, espero que hayáis pasado un rato entretenido y os hayáis olvidado por un rato de <i>La Situación</i>. ¡No olvidéis compartir el juego si os ha gustado! <br> (code.diegopozas.com/zapatosmisterio)</p>
     <p>Gracias a Judit y a Augusto, que me han dado ideas y me han ayudado con los textos y las pistas.</p>
     <p>¿Algo que decir? Cuéntame qué te ha parecido el juego, qué puzzle te ha gustado más o qué has merendado hoy, en <a href="https://www.twitter.com/dipo597">mi twitter</a>. También puedes ver otras cosas que haga en <a href="https://code.diegopozas.com/">code.diegopozas.com</a>.</p>
 </body>
