--- a/puzzles/completado.html
+++ b/puzzles/completado.html
@@ -17,6 +17,6 @@
     </div>
     <p>Volviendo al mundo real, espero que hayáis pasado un rato entretenido y os hayáis olvidado por un rato de <i>La Situación</i>. ¡No olvidéis compartir el juego si os ha gustado! <br> (code.diegopozas.com/zapatosmisterio)</p>
     <p>Gracias a Judit y a Augusto, que me han dado ideas y me han ayudado con los textos y las pistas.</p>
-    <p>¿Algo que decir? Cuéntame qué te ha parecido el juego, qué puzzle te ha gustado más o qué has merendado hoy, en <a href="https://www.twitter.com/dipo597">mi twitter</a>. También puedes ver otras cosas que haga en <a href="https://code.diegopozas.com/">code.diegopozas.com</a>.</p>
+    <p>¿Algo que decir? Cuéntame qué te ha parecido el juego, qué puzzle te ha gustado más o qué has merendado hoy, en <a href="https://www.twitter.com/dipo597">mi twitter</a>. También puedes ver otras cosas que haga en <a href="https://www.github.com/draulpozas">mi github</a>.</p>
 </body>
 </html>
