Added final hints. Shoe descriptions done

--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -41,15 +41,16 @@
         <h1>Novedad: Botas "Cumbre"</h1>
         <img src="https://cdn.pixabay.com/photo/2019/09/29/18/30/shoes-4514053_1280.jpg" alt="Cumbre">
         <p>Con las botas <i>Cumbre</i> podrás alcanzar tus metas más lejanas y difíciles.</p>
-        <p>Sus robustas y seguras suelas, sus acabados resistentes y su interior cálido y cómodo las convierten en la mejor opción para caminar por los terrenos más difíciles.</p>
+        <p>Sus robustas y seguras suelas, sus acabados resistentes en hilo amarillo y su interior cálido y cómodo las convierten en la mejor opción para caminar por los terrenos más difíciles, ya sea bajo las inclemencias del tiempo o bajo cielos azules.</p>
         <p>¡Cómpralas ahora y llévate unos calcetines rojos de regalo!</p>
     </article>
     <article class="novedad">
         <h1>Novedad: Zapatos de vestir "Oxford"</h1>
         <img src="https://cdn.pixabay.com/photo/2018/07/10/07/54/oxford-3528032_1280.jpg" alt="Oxford">
         <p>Categoría, distinción y clase.</p>
-        <p>Los zapatos <i>Oxford</i> son la elección perfecta para las ocasiones más señaladas. Sus refinados acabados proporcionan el más distinguido de los aspectos.</p>
+        <p>Los zapatos <i>Oxford</i> son la elección perfecta para las ocasiones más señaladas. Sus refinados acabados en hilo azul proporcionan el más distinguido de los aspectos.</p>
         <p>Emite brillantes destellos de elegancia con los zapatos más exclusivos de la Zapatería Misterio.</p>
+        <p>Son, además, más ecológicos que sus predecesores, pues hemos sustituido la piel de corzo rojo por piel sintética en el recubrimiento interior.</p>
         <p>¡Cómpralos ahora y llévate unos calcetines rojos de regalo!</p>
     </article>
 </body>
