Added external blog link

--- a/puzzles/tendencias.html
+++ b/puzzles/tendencias.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Otra forma de enfocar las cosas</h1>
-    <p>Resolver los problemas con tu ingenio está muy bien, pero deberías acostumbrarte a escuchar la voz de los expertos: es esencial a la hora de llevar un negocio que depende de algo tan volátil como el mundo de la moda. ¿Qué tal si, esta vez, echas un vistazo a <a href="#">este blog de tendencias</a>?</p>
+    <p>Resolver los problemas con tu ingenio está muy bien, pero deberías acostumbrarte a escuchar la voz de los expertos: es esencial a la hora de llevar un negocio que depende de algo tan volátil como el mundo de la moda. ¿Qué tal si, esta vez, echas un vistazo a <a href="https://juanisstyle.blogspot.com/" target="_blank">este blog de tendencias</a>?</p>
     <button class="yellow" onclick="switchClass(0); check()">⮾</button>
     <button class="yellow" onclick="switchClass(1); check()">⮾</button>
     <button class="yellow" onclick="switchClass(2); check()">⮾</button>
