fixed a couple of typos

--- a/zapatos/index.html
+++ b/zapatos/index.html
@@ -50,7 +50,7 @@
         <h1>Novedad: Deportivas "Equilibrio"</h1>
         <img src="https://cdn.pixabay.com/photo/2017/07/02/19/24/dumbbells-2465478_1280.jpg" alt="Equilibradas">
         <p>Un diseño moderno para una nueva generacion. Las nuevas deportivas <i>Equilibrio</i> ofrecen un perfecto rendimiento para todo tipo de actividades deportivas.</p>
-        <p>Disponibles en dos colores (azul y rojo), son la opción perfecta para poerte en forma. Sus suelas han sido diseñadas con esmero y cariño para asegurar la pisada más cómoda y suave posible, permitiendo así la actividad durante horas sin siquiera recordad que las llevas puestas.</p>
+        <p>Disponibles en dos colores (azul y rojo), son la opción perfecta para ponerte en forma. Sus suelas han sido diseñadas con esmero y cariño para asegurar la pisada más cómoda y suave posible, permitiendo así la actividad durante horas sin siquiera recordar que las llevas puestas.</p>
         <p>¡Cómpralas ahora y llévate unos calcetines rojos de regalo!</p>
     </article>
 </body>
