--- a/puzzles/detalle.html
+++ b/puzzles/detalle.html
@@ -32,6 +32,7 @@
             <div class="mins"></div>
             <div class="screen"></div>
         </div>
+        <p>(Prueba a usar la rueda del ratón sobre los relojes)</p>
     </div>
 
     <input type="text" id="input"><button onclick="check()">🡢</button><div id="incorrect" class="transparent">❌</div>
